# wrenn

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  NOTICE  README.md  go.mod  go.sum  sqlc.yaml
cmd/control-plane/: main.go
cmd/host-agent/: main.go
db/migrations/: 20260310094104_initial.sql  20260311224925_snapshots.sql  20260313210608_auth.sql  20260313210611_team_ownership.sql  20260315001514_oauth.sql  20260316203135_admin_users.sql  20260316203138_byoc_teams.sql  (+21 more)
deploy/: Caddyfile.dev  docker-compose.dev.yml
envd/: LICENSE  Makefile  go.mod  go.sum  main.go
envd-rs/: Cargo.toml  README.md  build.rs
envd-rs/buffa-types-shim/: Cargo.toml  build.rs
envd-rs/buffa-types-shim/src/: lib.rs
envd-rs/src/: config.rs  conntracker.rs  execcontext.rs  logging.rs  main.rs  state.rs  util.rs
envd-rs/src/auth/: middleware.rs  mod.rs  signing.rs  token.rs
envd-rs/src/cgroups/: mod.rs
envd-rs/src/crypto/: hmac_sha256.rs  mod.rs  sha256.rs  sha512.rs
envd-rs/src/host/: metrics.rs  mmds.rs  mod.rs
envd-rs/src/http/: encoding.rs  envs.rs  error.rs  files.rs  health.rs  init.rs  metrics.rs  mod.rs  snapshot.rs
envd-rs/src/permissions/: mod.rs  path.rs  user.rs
envd-rs/src/port/: conn.rs  forwarder.rs  mod.rs  scanner.rs  subsystem.rs
envd-rs/src/rpc/: entry.rs  filesystem_service.rs  mod.rs  pb.rs  process_handler.rs  process_service.rs
frontend/: package.json  pnpm-lock.yaml  vite.config.ts
images/: envd.service  wrenn-init.sh
recipes/: code-runner-beta.healthcheck  code-runner-beta.recipefile  python-interpreter-v0-beta.healthcheck  python-interpreter-v0-beta.recipefile  test-jupyter-kernel.py
scripts/: prepare-wrenn-user.sh  rootfs-from-container.sh  test-host.sh  update-debug-rootfs.sh  update-minimal-rootfs.sh
(+390 files in other folders)
